updates css colors for markers and tooltips.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,12 +18,16 @@ html, body {
   background-repeat: no-repeat;
 }
 
-.leaflet-popup-content h3 {
-  text-align: center;
-}
 
 .leaflet-popup-content p {
   margin-bottom: 0;
   font-size: 13px;
   text-align: center;
 }
+
+.leaflet-popup-content {background: #23344c; color: #fff; border-color: #fff; border-radius:12px; margin: 6px;}
+.leaflet-popup-content-wrapper {border-radius: 12px; background: #141d2b; color: #fff;}
+.leaflet-popup-content a {color: #bada55;}
+.leaflet-popup-content h3 {font-size:22px;text-align: center;}
+.leaflet-popup-content a:hover {color: #d8fc62;}
+.leaflet-popup-tip {border-top: 10px solid #141d2b;}
